Modificacion en el archivo index para ejecutar el ejercicio de la semana dos con js

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li>Jugar en la PC</li>
       </ul>
       <h1>Foto Significativa</h1>
-      <img src="Recursos/Significativa.jpeg" alt="">
+      <img src="Recursos/Significativa.jpeg" width="325" height="450" alt="">
 
 </body>
 
